# django_stripe

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
django_stripe/: db.sqlite3
django_stripe/api/: admin.py  models.py  urls.py  utils.py  views.py
django_stripe/api/migrations/: 0001_initial.py
django_stripe/api/templates/: base.html
django_stripe/api/templates/api/: item.html
django_stripe/django_stripe/: settings.py  urls.py
